# tomato-ai

./: .gitignore  AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 0e5a03fdd37f_add_reminders_table.py  1494d893a4ce_initial_migration.py  1b389b06c0a6_add_timezone_support_to_datetime_columns.py  2ae89849827e_add_send_at_to_reminders.py  36d27d644fbe_add_expires_at_pause_start_time_and_.py  a16f4c7d08a6_.py  afa0a945d23c_add_user_table.py  b1a2b3c4d5e6_add_messages_table.py  c34b4db3787f_add_session_type_to_pomodoro_session.py  cf363573194d_add_expires_at_and_remaining_duration_.py  d3f4a3b2c1e0_add_chat_id_to_pomodoro_sessions.py  e18d7455bbbe_.py  e2a5a5f1f1e1_remove_job_id_from_reminders.py  f5e3a8b4c2d1_add_escalation_count_to_reminders.py
src/tomato_ai/: agents.py  bootstrap.py  config.py  handlers.py  main.py  worker.py
src/tomato_ai/adapters/: database.py  event_bus.py  orm.py  repository.py  telegram.py
src/tomato_ai/domain/: agent_actions.py  events.py  models.py  schemas.py  services.py  uow.py
src/tomato_ai/entrypoints/: fastapi_app.py  schemas.py
src/tomato_ai/service_layer/: bootstrap.py  event_bus.py  handlers.py  services.py  unit_of_work.py
telegram_mini_app/: index.html
tests/: conftest.py  test_api.py  test_handlers.py  test_reminder_service.py
tests/integration/: conftest.py  test_handlers_integration.py  test_integration_handlers.py
